<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.smadec.maxx.cigr.TutorialActivity">

    <ViewFlipper
        android:id="@+id/tutorialFlipper"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTutorialCamera2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/tutorialText1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewTutorial1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tutorial_screenshot_1_context_description"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/tutorial1" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTutorialStabilize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/tutorialText2"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewTutorial2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tutorial_screenshot_2_context_description"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/tutorial2" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTutorialVideoEdit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/tutorialText3"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewTutorial3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tutorial_screenshot_3_context_description"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/tutorial3" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTutorialResultVideo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/tutorialText4"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewTutorial4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tutorial_screenshot_4_context_description"
                android:scaleType="centerInside" />

        </android.support.v7.widget.LinearLayoutCompat>

    </ViewFlipper>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="5pt"
        android:layout_marginEnd="10pt"
        android:layout_marginTop="5pt"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tutorial_button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="prevClick"
            android:text="@string/button_back"
            android:visibility="invisible" />

        <Button
            android:id="@+id/tutorial_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="nextClick"
            android:text="@string/button_next" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
